--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,9 +9,9 @@ on:
     #branches: 
     #  - master 
   pull_request:
-  schedule: 
+  #schedule: 
     # do a build every day
-    - cron: "1 1 * * *"
+    #- cron: "1 1 * * *"
 
 jobs:
   ufbt-build:
